[project]
name = "flaron"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "cachetools>=7.1.1",
    "fastapi>=0.136.0",
    "logfire[fastapi]>=4.32.1",
    "python-dotenv==1.0.0",
    "rich>=15.0.0",
    "slack-bolt>=1.28.0",
    "upstash-redis>=1.7.0",
    "uvicorn>=0.44.0",
]
